# XlsxWriter.swift

./: .gitignore  CLAUDE.md  Cargo.toml  Package.swift  README.md  build-ios.sh  gh-release.sh  rust-toolchain.toml
Sources/XlsxWriterFFI/: xlsxwriter.swift
Sources/XlsxWriterSwift/: XlsxWriterSwift.swift
Tests/XlsxWriterSwiftTests/: XlsxWriterSwiftTests.swift
src/: lib.rs
